--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1080px, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
@@ -52,7 +52,7 @@
                     <div id="chooseFile">
                         <input type="file" class="text-center" onchange="readURL(this);" name="photo">
                     </div>
-                    <img class="ms-auto" id="photo" style="width:30%;" src="Photo.jpg" alt="">
+                    <img class="ms-auto" id="photo" style="width:30%;" src="./photo.jpg" alt="">
                 </div>
             </div>
         </div>
